--- a/test_fusion/playbook.yml
+++ b/test_fusion/playbook.yml
@@ -52,11 +52,12 @@
         group: root
         mode: '0755'
 
-    # - name: Démarrer le service Samba
-    #   service:
-    #     name: smbd
-    #     state: started
-    #     enabled: true
+    - name: Démarrer le service Samba
+      service:
+        name: "smdb"
+        state: "started"
+        enabled: true
+        use: "service"
 
     - name: Créer un utilisateur Samba
       command: smbpasswd -a root
