--- a/test_fusion/samba/smb.conf
+++ b/test_fusion/samba/smb.conf
@@ -1,19 +1,19 @@
 [global]
     workgroup = SAMDOM
-    realm = MYSITE.LAN
+    realm = SAMDOM.EXAMPLE.COM
     netbios name = AD
     server role = active directory domain controller
-
-    # Intégration avec Bind9
-    server services = -dns               # Samba délègue le DNS à Bind9
-    dns forwarder = 127.0.0.1            # Samba pointe vers Bind9 localement
-    allow dns updates = secure           # Autorise les mises à jour DNS sécurisées
     
+    # Configuration DNS
+    dns forwarder = 8.8.8.8  # Utilisez un DNS public ou celui de votre FAI
+    server services = -dns
+    allow dns updates = secure  # Permet aux machines jointes de mettre à jour le DNS
+
     # Réseau
-    interfaces = eth0 lo
+    interfaces = eth0 lo  # Adaptez à votre interface réseau
     bind interfaces only = yes
 
-    # Protocoles SMB modernes
+    # Protocoles SMB pour compatibilité moderne
     server min protocol = SMB2
     server max protocol = SMB3
 
@@ -21,3 +21,11 @@
     log level = 3
     log file = /var/log/samba/samba.log
     max log size = 1000
+
+[sysvol]
+    path = /var/lib/samba/sysvol
+    read only = No
+
+[netlogon]
+    path = /var/lib/samba/sysvol/samdom.example.com/scripts
+    read only = No
