--- a/test_fusion/playbook.yml
+++ b/test_fusion/playbook.yml
@@ -21,16 +21,16 @@
         src: ./bind/named.conf
         dest: /etc/bind/named.conf
 
-    # - name: Copier les options de configuration de Bind9
-    #   copy:
-    #     src: ./bind/named.conf.options
-    #     dest: /etc/bind/named.conf.options
+    - name: Copier les options de configuration de Bind9
+      copy:
+        src: ./bind/named.conf.options
+        dest: /etc/bind/named.conf.options
 
-    # - name: Copier les fichiers de zones DNS
-    #   copy:
-    #     src: ./bind/zones/
-    #     dest: /etc/bind/zones/
-    #     remote_src: yes
+    - name: Copier les fichiers de zones DNS
+      copy:
+        src: ./bind/zones/
+        dest: /etc/bind/zones/
+        remote_src: yes
 
     # - name: Redémarrer Bind9 pour appliquer les changements
     #   service:
