--- a/test_fusion/playbook.yml
+++ b/test_fusion/playbook.yml
@@ -13,6 +13,7 @@
           - bind9
           - samba
           - smbclient
+          - nano
         state: present
 
     # Configuration de Bind9
