--- a/test_fusion/samba/smb.conf
+++ b/test_fusion/samba/smb.conf
@@ -22,10 +22,10 @@
     log file = /var/log/samba/samba.log
     max log size = 1000
 
-[sysvol]
-    path = /var/lib/samba/sysvol
-    read only = No
+# [sysvol]
+#     path = /var/lib/samba/sysvol
+#     read only = No
 
-[netlogon]
-    path = /var/lib/samba/sysvol/samdom.example.com/scripts
-    read only = No
+# [netlogon]
+#     path = /var/lib/samba/sysvol/samdom.example.com/scripts
+#     read only = No
