--- a/test_fusion/playbook.yml
+++ b/test_fusion/playbook.yml
@@ -14,6 +14,7 @@
           - samba
           - smbclient
           - nano
+          - ntpdate
         state: present
 
     # Configuration de Bind9
