--- a/test_fusion/playbook.yml
+++ b/test_fusion/playbook.yml
@@ -15,7 +15,7 @@
           - smbclient
           - nano
           - ntpdate
-          - krb5-clients
+          - krb5-kdc
         state: present
 
     # Configuration de Bind9
