--- a/test_fusion/playbook.yml
+++ b/test_fusion/playbook.yml
@@ -155,6 +155,7 @@
         src: ./kerberos/krb5.conf
         dest: /etc/krb5.conf
 
+
     - name: Exécuter la commande samba-tool domain provision
       ansible.builtin.expect:
         command: samba-tool domain provision --use-rfc2307 --interactive
@@ -163,9 +164,10 @@
           'Domain': 'EXAMPLE'
           'Server Role': 'dc'
           'DNS backend': 'SAMBA_INTERNAL'
-          'Administrator password': 'VotreMotDePasseAdmin'
-          'Retype password': 'VotreMotDePasseAdmin'
+          'Administrator password': 'root'
+          'Retype password': 'root'
       become: true
+
 
 
     - name: Démarrer et activer les services nécessaires
