--- a/test_fusion/playbook.yml
+++ b/test_fusion/playbook.yml
@@ -158,12 +158,7 @@
 
     - name: Provisionner le domaine Samba (non interactif)
       command:
-        cmd: samba-tool domain provision --use-rfc2307 \
-              --realm=EXAMPLE.COM \
-              --domain=EXAMPLE \
-              --server-role=dc \
-              --dns-backend=SAMBA_INTERNAL \
-              --adminpass=VotreMotDePasseAdmin
+        cmd: samba-tool domain provision --use-rfc2307 --realm=EXAMPLE.COM --domain=EXAMPLE --server-role=dc --dns-backend=SAMBA_INTERNAL --adminpass=root
       become: true
 
 
