--- a/test_fusion/vars/main.yml
+++ b/test_fusion/vars/main.yml
@@ -1,8 +1,8 @@
 # Variables pour Samba
-samba_workgroup: EXAMPLE
-samba_realm: EXAMPLE.COM
+samba_workgroup: mysite
+samba_realm: mysite.lan
 samba_netbios_name: DC01
 
 # Variables pour Bind9
-bind_zone_direct: example.com
+bind_zone_direct: mysite.lan
 bind_zone_reverse: 0.168.192.in-addr.arpa
