--- a/test_fusion/playbook.yml
+++ b/test_fusion/playbook.yml
@@ -156,17 +156,6 @@
         dest: /etc/krb5.conf
 
 
-    # - name: Provisionner le domaine Samba (non interactif)
-    #   command: >
-    #     samba-tool domain provision
-    #     --use-rfc2307
-    #     --realm=EXAMPLE.COM
-    #     --domain=EXAMPLE
-    #     --server-role=dc
-    #     --dns-backend=SAMBA_INTERNAL
-    #     --adminpass=Roa42300
-    #   become: true
-
     - name: Redémarrer les services Samba et Bind9
       service:
         name: "{{ item }}"
@@ -191,4 +180,4 @@
         enabled: true
       with_items:
         - named
-        - samba
+        - samba-ad-dc
