--- a/ad_windows/dockerfile
+++ b/ad_windows/dockerfile
@@ -1,17 +1,11 @@
 FROM ubuntu:20.04
 
-# Met à jour les paquets et installe les dépendances nécessaires
+# Met à jour le système et installe SSH
 RUN apt-get update && apt-get install -y --no-install-recommends \
     openssh-server \
-    bind9 \
-    samba \
     python3 \
     python3-pip \
-    iputils-ping \
-    tzdata && \
-    echo "Europe/Paris" > /etc/timezone && \
-    ln -fs /usr/share/zoneinfo/Europe/Paris /etc/localtime && \
-    dpkg-reconfigure -f noninteractive tzdata && \
+    iputils-ping && \
     mkdir -p /var/run/sshd && \
     echo 'root:root' | chpasswd && \
     sed -i 's/#Port 22/Port 22/' /etc/ssh/sshd_config && \
@@ -24,7 +18,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 RUN pip3 install ansible
 
 # Expose les ports nécessaires
-EXPOSE 53/udp 53/tcp 22 139 445 389
+EXPOSE 22 1194/udp
 
 # Commande de démarrage
 CMD service ssh start && tail -f /dev/null
