--- a/ad_windows/dockerfile
+++ b/ad_windows/dockerfile
@@ -5,6 +5,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     openssh-server \
     python3 \
     python3-pip \
+    nano \
     iputils-ping && \
     mkdir -p /var/run/sshd && \
     echo 'root:root' | chpasswd && \
