test avec autre chemin

--- a/ad_windows/playbook.yml
+++ b/ad_windows/playbook.yml
@@ -182,7 +182,7 @@
           </ca>
 
           <cert>
-          {{ lookup('file', '{{ easyrsa_dir }}/pki/issued/client.crt') }}
+          {{ lookup('file', '/etc/openvpn/easy-rsa/pki/issued/client.crt') }}
           </cert>
 
           <key>
