--- a/ad_windows/kerberos/krb5.conf
+++ b/ad_windows/kerberos/krb5.conf
@@ -5,8 +5,8 @@
 
 [realms]
     MON_DOMAINE.LOCAL = {
-        kdc = 192.168.119.41  # adresse IP ou le FQDN de ton contrôleur de domaine
-        admin_server = antoine.mon_domaine.local
+        kdc = 192.168.119.41  #adresse IP ou le FQDN de ton contrôleur de domaine
+        admin_server = administrateur.mon_domaine.local
     }
 
 [domain_realm]
