--- a/ad_windows/kerberos/krb5.conf
+++ b/ad_windows/kerberos/krb5.conf
@@ -6,7 +6,7 @@
 [realms]
     MON_DOMAINE.LOCAL = {
         kdc = 192.168.119.41  #adresse IP ou le FQDN de ton contrôleur de domaine
-        admin_server = administrateur.mon_domaine.local
+        admin_server = Administrator.mon_domaine.local
     }
 
 [domain_realm]
