--- a/ad_windows/playbook.yml
+++ b/ad_windows/playbook.yml
@@ -159,37 +159,36 @@
 
 
     # Étape 10 : Générer le fichier client.ovpn
-    # - name: Créer le fichier client.ovpn directement
-    #   copy:
-    #     dest: "{{ openvpn_dir }}/client.ovpn"
-    #     content: |
-    #       client
-    #       dev tun
-    #       proto udp
-    #       remote {{ ansible_host }} 1194
-    #       resolv-retry infinite
-    #       nobind
-    #       persist-key
-    #       persist-tun
-    #       remote-cert-tls server
-    #       cipher AES-256-CBC
-    #       auth SHA256
-    #       key-direction 1
-    #       verb 3
+    - name: Générer le fichier client.ovpn
+      copy:
+        dest: "/etc/openvpn/client.ovpn"
+        content: |
+          client
+          dev tun
+          proto udp
+          remote {{ ansible_host }} 1194
+          resolv-retry infinite
+          nobind
+          persist-key
+          persist-tun
+          remote-cert-tls server
+          auth SHA256
+          cipher AES-256-CBC
+          verb 3
+          key-direction 1
 
-    #       <ca>
-    #       {{ lookup('file', '{{ easyrsa_dir }}/pki/ca.crt') }}
-    #       </ca>
+          <ca>
+          {{ lookup('file', '/etc/openvpn/easy-rsa/pki/ca.crt') }}
+          </ca>
+          <cert>
+          {{ lookup('file', '/etc/openvpn/easy-rsa/pki/issued/client.crt') }}
+          </cert>
+          <key>
+          {{ lookup('file', '/etc/openvpn/easy-rsa/pki/private/client.key') }}
+          </key>
+          <tls-auth>
+          {{ lookup('file', '/etc/openvpn/easy-rsa/pki/ta.key') }}
+          </tls-auth>
+      delegate_to: localhost
 
-    #       <cert>
-    #       {{ lookup('file', '/etc/openvpn/easy-rsa/pki/issued/client.crt') }}
-    #       </cert>
-
-    #       <key>
-    #       {{ lookup('file', '{{ easyrsa_dir }}/pki/private/client.key') }}
-    #       </key>
-
-    #       <tls-auth>
-    #       {{ lookup('file', '{{ easyrsa_dir }}/pki/ta.key') }}
-    #       </tls-auth>
 
